added payment page

--- a/src/Payment.css
+++ b/src/Payment.css
@@ -25,6 +25,10 @@
     flex: 0.2;
 }
 
-.payment__address, .payment__items {
+.payment__address, .payment__items{
+    flex: 0.8;
+}
+
+.payment__details{
     flex: 0.8;
 }
